compiler/src/test/resources/golden/errors/type_arg_count.err
error: `add` takes 2 argument(s), got 1
  --> type_arg_count.dawn:3:17
  |
3 | fn f() -> Int = add(1)
  |                 ^^^^^^
  = hint: signature: fn add(a: Int, b: Int) -> Int
